# planner

./: .dockerignore  .gitignore  Dockerfile.android  build-android.sh  pyproject.toml  requirements.txt  setup.sh
docker/: aliyun-mirror.gradle  android-build.sh
src/dailyplanner/: __main__.py  app.py  database.py  finance_sms.py  investment_prices.py  investments.py  models.py  webview_handler.py
src/dailyplanner.dist-info/: METADATA  top_level.txt
src/dailyplanner/services/: recurring.py  timer.py
src/dailyplanner/ui/: colors.py  css.py  shell.py  state.py  tokens.py
src/dailyplanner/ui/static/: app.js
src/dailyplanner/utils/: jalali.py  persian.py  platform.py
tests/: audit_renders.js  frontend_smoke.js  test_dailyplanner.py  time_picker_test.js
