[build-system]
requires = ["briefcase"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.briefcase]
project_name = "Daily Planner"
bundle = "com.taskplanner"
version = "1.0.0"
author = "darklord"
author_email = "leonkennedymail@gmail.com"
url = "https://taskplanner.example.com"
license = "LicenseRef-Proprietary"
license-files = []

[tool.briefcase.app.dailyplanner]
formal_name = "پلن‌ساز روزانه"
description = "Persian Daily Task Planner - برنامه‌ریز روزانه فارسی"
long_description = "A Persian-language daily task planner with time tracking, finance tracking, and wellness monitoring."
sources = ["src/dailyplanner"]
icon = "resources/dailyplanner"
requires = [
    "toga-core>=0.4.0",
    "jdatetime>=5.0.0",
    "arabic-reshaper>=3.0.0",
    "python-bidi==0.4.2",
]
test_requires = ["pytest>=7.0"]

[tool.briefcase.app.dailyplanner.macOS]
requires = [
    "toga-cocoa>=0.4.0",
    "std-nslog~=1.0.0",
    "matplotlib>=3.7.0",
]

[tool.briefcase.app.dailyplanner.linux]
requires = [
    "toga-gtk>=0.4.0",
    "matplotlib>=3.7.0",
]

[tool.briefcase.app.dailyplanner.windows]
requires = [
    "toga-winforms>=0.4.0",
    "matplotlib>=3.7.0",
]

[tool.briefcase.app.dailyplanner.iOS]
requires = [
    "toga-iOS>=0.4.0",
    "std-nslog~=1.0.0",
]

[tool.briefcase.app.dailyplanner.android]
requires = [
    "toga-android>=0.4.0",
]
splash_background_color = "#FFFFFF"
build_gradle_dependencies = [
    "androidx.appcompat:appcompat:1.0.2",
    "androidx.constraintlayout:constraintlayout:1.1.3",
    "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0",
    "androidx.webkit:webkit:1.15.0",
]
build_gradle_extra_content = """
chaquopy.defaultConfig.staticProxy("toga_android.widgets.internal.webview")
"""
permissions = {}
